[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.0"

[[bin]]
name = "day01"
path = "day01/src/main.rs"

[[bin]]
name = "day02"
path = "day02/src/main.rs"

[[bin]]
name = "day03"
path = "day03/src/main.rs"

[[bin]]
name = "day04"
path = "day04/src/main.rs"
